@startuml
'https://plantuml.com/class-diagram
class UsersEntity {
    #userId: int
    #username: string
    #password: string
    #email: string
    #fName: string
    #lName: string
    #dateOfBirth: date
    #postcode: string
    #area: string
    #type: string
    +int getUserId()
    +void setUserId(int userId)
    +string getUsername()
    +void setUsername(String username)
    +string getPassword()
    +void setPassword(String password)
    +string getEmail()
    +void setEmail(String email)
    +string getFName()
    +void setFName(String fName)
    +string getLName()
    +void setLName(String lName)
    +date getDateOfBirth()
    +void setDateOfBirth(Date dateOfBirth)
    +string getPostcode()
    +void setPostcode(String postcode)
    +string getArea()
    +void setArea(String area)
    +string getType()
    +void setType(String type)
}

class CurrentOrderEntity {
    #orderId: int
    #customerId: int
    #productId: int
    #quantity: int
    +int getOrderId()
    +void setOrderId(int orderId)
    +int getCustomerId()
    +void setCustomerId(int customerId)
    +int getProductId()
    +void setProductId(int productId)
    +int getQuantity()
    +void setQuantity(int quantity)
}

class InvoiceEntity {
    #invoiceId: int
    #customerId: int
    #productId: int
    #quantity: int
    +int getInvoiceId()
    +void setInvoiceId(int invoiceId)
    +int getCustomerId()
    +void setCustomerId(int customerId)
    +int getProductId()
    +void setProductId(int productId)
    +int getQuantity()
    +void setQuantity(int quantity)
}

class TrollyEntity  {
    #trollyId: int
    #customerId: int
    #productId: int
    #quantity: int
    +int getTrollyId()
    +void setTrollyId(int trollyId)
    +int getCustomerId()
    +void setCustomerId(int customerId)
    +int getProductId()
    +void setProductId(int productId)
    +int getQuantity()
    +void setQuantity(int quantity)
}

class DroplistEntity {
    #droplistId: int
    #driverId: int
    #customerId: int
    +int getDroplistId()
    +void setDroplistId(int droplistId)
    +int getDriverId()
    +void setDriverId(int driverId)
    +int getCustomerId()
    +void setCustomerId(int customerId)
}

class ProductEntity {
    #productId: int
    #name: string
    #description: string
    #price: double
    +int getProductId()
    +void setProductId(int productId)
    +string getName()
    +void setName(String name)
    +string getDescription()
    +void setDescription(String description)
    +double getPrice()
    +void setPrice(double price)

}

InvoiceEntity <|-- UsersEntity
CurrentOrderEntity <|-- UsersEntity
TrollyEntity <|-- UsersEntity
DroplistEntity <|-- UsersEntity
ProductEntity <|-- CurrentOrderEntity
ProductEntity <|-- TrollyEntity
ProductEntity <|-- InvoiceEntity

@enduml